--- a/src/app/core/pages/page-login/page-login.component.html
+++ b/src/app/core/pages/page-login/page-login.component.html
@@ -1,1 +1,10 @@
-<p>page-login works!</p>
+<div fxLayout fxLayout.lt-sm="column" class="container" fxLayoutAlign="space-between">
+  <div class="informacion" fxFlex="1 1 30%" fxLayout="column" fxLayoutAlign="center center">
+    <mat-icon svgIcon="logo"></mat-icon>
+    <h2>Sistema de generación de certificados</h2>
+  </div>
+
+  <div class="login" fxFlex="1 1 30%" fxLayout fxLayoutAlign="center center">
+    <cer-login></cer-login>
+  </div>
+</div>
