--- a/src/app/core/pages/page-login/page-login.component.css
+++ b/src/app/core/pages/page-login/page-login.component.css
@@ -1,16 +1,35 @@
+.container {
+  width: 100%;
+  height: 100vh;
+  background: url(/assets/images/diplomas.jpeg);
+  background-size: cover;
+  background-position: center;
+  display: flex; /* Usar flexbox para organizar los elementos hijos */
+}
+
+.informacion,
+.login {
+  display: flex; /* Usar flexbox para organizar los elementos internos de cada hijo */
+  flex-direction: column; /* Asegurarse de que los elementos internos se apilen verticalmente */
+  justify-content: center; /* Centrar verticalmente los elementos internos */
+}
+
 .informacion {
-  margin-left: 20px; /* Reducir el margen para pantallas más pequeñas */
+  /* border: 1px solid black; */
 }
 
 .informacion img {
-  max-width: 100%; /* Hacer que la imagen sea responsive */
+  max-width: 100%;
 }
 
 .informacion h2 {
-  font-size: 24px; /* Reducir el tamaño del texto para pantallas más pequeñas */
-  line-height: 28px;
+  font-size: 28px;
+  line-height: 2;
   text-align: center;
+  padding: 10px;
   font-family: "Roboto", sans-serif;
+  font-weight: bold;
+  color: aliceblue;
 }
 
 .informacion mat-icon {
@@ -20,26 +39,14 @@
 
 .login {
   background: white;
-  width: 100%; /* Opcional: Asegurarse de que el fondo blanco se extienda al 100% del contenedor */
-}
-
-.container {
   width: 100%;
-  height: 100vh;
-  background: url(/assets/images/diplomas.jpeg);
-  background-size: cover;
-  background-position: center;
+  height: 100%;
+  /* border: 1px solid black; */
 }
-
 @media screen and (max-width: 600px) {
-  /* Estilos específicos para pantallas más pequeñas, ajusta según sea necesario */
-  .informacion {
-    margin-left: 10px;
-  }
-
   .informacion h2 {
     font-size: 26px;
-    line-height: 22px;
+    line-height: 2;
     color: aliceblue;
     font-family: "Roboto", sans-serif;
     word-spacing: 10px;
@@ -52,5 +59,6 @@
 
   .login {
     width: 100%;
+    margin-top: 20px; /* Ajusta según sea necesario para separar del borde superior */
   }
 }
