--- a/src/app/core/pages/page-login/page-login.component.css
+++ b/src/app/core/pages/page-login/page-login.component.css
@@ -1,25 +1,25 @@
 .container {
   width: 100%;
   height: 100vh;
-  background: url(/assets/images/diplomas.jpeg);
   background-size: cover;
   background-position: center;
   display: flex; /* Usar flexbox para organizar los elementos hijos */
 }
 
-.informacion,
 .login {
-  display: flex; /* Usar flexbox para organizar los elementos internos de cada hijo */
-  flex-direction: column; /* Asegurarse de que los elementos internos se apilen verticalmente */
-  justify-content: center; /* Centrar verticalmente los elementos internos */
+  /* No es necesario display: flex aquí ya que hereda la propiedad del contenedor principal */
+  justify-content: center;
+  background: white;
+  width: 100%; /* Ajustar según sea necesario */
+  height: 100%;
 }
 
 .informacion {
-  /* border: 1px solid black; */
 }
 
 .informacion img {
-  max-width: 100%;
+  max-width: 60%;
+  height: auto;
 }
 
 .informacion h2 {
@@ -29,36 +29,25 @@
   padding: 10px;
   font-family: "Roboto", sans-serif;
   font-weight: bold;
-  color: aliceblue;
+  color: rgb(0, 0, 0);
 }
 
-.informacion mat-icon {
-  width: 100px;
-  height: 100px;
-}
-
-.login {
-  background: white;
-  width: 100%;
-  height: 100%;
-  /* border: 1px solid black; */
-}
 @media screen and (max-width: 600px) {
   .informacion h2 {
-    font-size: 26px;
+    font-size: 18px;
     line-height: 2;
-    color: aliceblue;
+    text-align: center;
+    padding: 0.8em;
     font-family: "Roboto", sans-serif;
-    word-spacing: 10px;
+    font-weight: bold;
+    color: rgb(0, 0, 0);
+    width: 60%;
   }
-
-  .informacion mat-icon {
-    width: 60px;
-    height: 60px;
+  .informacion img {
+    max-width: 60%;
   }
-
-  .login {
+  .container {
     width: 100%;
-    margin-top: 20px; /* Ajusta según sea necesario para separar del borde superior */
+    height: 100vh;
   }
 }
