--- a/src/app/shared/components/container/container.component.html
+++ b/src/app/shared/components/container/container.component.html
@@ -1,1 +1,5 @@
-<p>container works!</p>
+<div fxLayout fxLayoutAlign="center" class="container">
+  <mat-card fxFlex="1 1 98%" class="mat-elevation-z3">
+    <ng-content></ng-content>
+  </mat-card>
+</div>
