--- a/src/app/shared/components/title/title.component.html
+++ b/src/app/shared/components/title/title.component.html
@@ -1,1 +1,4 @@
-<p>title works!</p>
+<mat-toolbar fxLayout fxLayoutGap="10px">
+  <mat-icon [svgIcon]="path.icon"></mat-icon>
+  <h2>Gestor de {{ path.title }}</h2>
+</mat-toolbar>
