--- a/src/app/core/pages/page-login/page-login.component.css
+++ b/src/app/core/pages/page-login/page-login.component.css
@@ -12,6 +12,7 @@
   background: white;
   width: 100%; /* Ajustar según sea necesario */
   height: 100%;
+  background-color: #f0f6f7;
 }
 
 .informacion {
