feat: Implementa el componente paginator

--- a/src/app/categorias/pages/page-list/page-list.component.html
+++ b/src/app/categorias/pages/page-list/page-list.component.html
@@ -1,5 +1,10 @@
 <cer-title></cer-title>
 <cer-container>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque ut similique laudantium, officia unde enim aspernatur dolores expedita, voluptate omnis deleniti impedit distinctio hic perferendis iusto possimus delectus quod recusandae.
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet magni minima omnis! Consequatur explicabo rerum illum officiis nam, beatae temporibus sed facere? Maiores ipsum commodi nam laborum quas voluptatum ex?
+  Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque ut similique
+  laudantium, officia unde enim aspernatur dolores expedita, voluptate omnis
+  deleniti impedit distinctio hic perferendis iusto possimus delectus quod
+  recusandae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet
+  magni minima omnis! Consequatur explicabo rerum illum officiis nam, beatae
+  temporibus sed facere? Maiores ipsum commodi nam laborum quas voluptatum ex?
+  <cer-paginator> </cer-paginator>
 </cer-container>
