--- a/src/app/usuarios/pages/page-list/page-list.component.html
+++ b/src/app/usuarios/pages/page-list/page-list.component.html
@@ -6,4 +6,5 @@
   recusandae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet
   magni minima omnis! Consequatur explicabo rerum illum officiis nam, beatae
   temporibus sed facere? Maiores ipsum commodi nam laborum quas voluptatum ex?
+  <cer-paginator> </cer-paginator>
 </cer-container>
