--- a/src/app/shared/components/keypad-button/keypad-button.component.html
+++ b/src/app/shared/components/keypad-button/keypad-button.component.html
@@ -1,1 +1,11 @@
-<p>keypad-button works!</p>
+<div fxLayout="column" fxLayoutGap="10px">
+    <button
+      mat-fab
+      *ngFor="let button of keypadButtons"
+      [color]="button.color"
+      [matTooltip]="button.tooltip"
+      (click)="doAction(button.action)"
+    >
+      <mat-icon>{{ button.icon }}</mat-icon>
+    </button>
+  </div>
