--- a/src/app/instructores/pages/page-list/page-list.component.html
+++ b/src/app/instructores/pages/page-list/page-list.component.html
@@ -1,10 +1,21 @@
 <cer-title></cer-title>
 <cer-container>
-  Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque ut similique
-  laudantium, officia unde enim aspernatur dolores expedita, voluptate omnis
-  deleniti impedit distinctio hic perferendis iusto possimus delectus quod
-  recusandae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet
-  magni minima omnis! Consequatur explicabo rerum illum officiis nam, beatae
-  temporibus sed facere? Maiores ipsum commodi nam laborum quas voluptatum ex?
-  <cer-paginator> </cer-paginator>
+  <ng-scrollbar class="heightMaxScrollBar">
+    <cer-table [data]="data" [metaDataColumns]="metaDataColumns">
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef></th>
+        <td mat-cell *matCellDef="let row" class="alignButton">
+          <button mat-icon-button color="primary" (click)="openForm(row)" matTooltip="EDITAR">
+            <mat-icon>edit</mat-icon>
+          </button>
+          <button mat-icon-button color="accent" (click)="delete(row.idlibros)" matTooltip="ELIMINAR">
+            <mat-icon>delete</mat-icon>
+          </button>
+        </td>
+      </ng-container>
+    </cer-table>
+  </ng-scrollbar>
+  <cer-paginator (onChangePage)="changePage($event)" [length]="totalRecords"> </cer-paginator>
 </cer-container>
+<cer-keypad-button [keypadButtons]="keypadButtons" (onClick)="doAction($event)">
+</cer-keypad-button>
