--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <mat-sidenav-container autosize="true">
-  <mat-sidenav opened="true" mode="side">
+  <mat-sidenav [opened]="abrir" mode="side" *ngIf="isMenuRequired">
     <div class="logo" fxLayout fxLayoutGap="20px" fxLayoutAlign="start center">
       <mat-icon>face</mat-icon>
       <h3 *ngIf="expanded">Sistema de Gestión</h3>
@@ -7,7 +7,7 @@
     <cer-menu (onToggleExpanded)="toggleExpanded($event)"></cer-menu>
   </mat-sidenav>
   <mat-sidenav-content>
-    <cer-header></cer-header>
+    <cer-header *ngIf="isHeaderRequired"></cer-header>
     <router-outlet></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
