refactor: Implementa diseño del formulario para el modulo de instructores

--- a/src/app/categorias/components/form/form.component.html
+++ b/src/app/categorias/components/form/form.component.html
@@ -11,7 +11,12 @@
     <div class="row">
       <mat-form-field class="outline">
         <mat-label>ID</mat-label>
-        <input matInput type="text" placeholder="ID" formControlName="id_cate" />
+        <input
+          matInput
+          type="text"
+          placeholder="ID"
+          formControlName="id_cate"
+        />
         <mat-icon matSuffix>label</mat-icon>
       </mat-form-field>
     </div>
@@ -19,7 +24,12 @@
     <div class="row">
       <mat-form-field class="outline">
         <mat-label>Nombre</mat-label>
-        <input matInput type="text" placeholder="Nombre" formControlName="nom_cate" />
+        <input
+          matInput
+          type="text"
+          placeholder="Nombre"
+          formControlName="nom_cate"
+        />
         <mat-icon matSuffix>text_fields</mat-icon>
       </mat-form-field>
     </div>
@@ -27,7 +37,12 @@
     <div class="row">
       <mat-form-field class="outline">
         <mat-label>Descripción</mat-label>
-        <input matInput type="text" placeholder="Descripción" formControlName="desc_cate" />
+        <input
+          matInput
+          type="text"
+          placeholder="Descripción"
+          formControlName="desc_cate"
+        />
         <mat-icon matSuffix>description</mat-icon>
       </mat-form-field>
     </div>
@@ -36,7 +51,12 @@
     <button mat-button color="primary" type="button" mat-dialog-close>
       Cancelar
     </button>
-    <button mat-raised-button color="primary" type="submit" [disabled]="emp_form.invalid">
+    <button
+      mat-raised-button
+      color="primary"
+      type="submit"
+      [disabled]="emp_form.invalid"
+    >
       Grabar
     </button>
   </div>
