--- a/src/app/categorias/pages/page-list/page-list.component.html
+++ b/src/app/categorias/pages/page-list/page-list.component.html
@@ -5,17 +5,28 @@
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef></th>
         <td mat-cell *matCellDef="let row" class="alignButton">
-          <button mat-icon-button color="primary" (click)="openForm(row)" matTooltip="EDITAR">
+          <button
+            mat-icon-button
+            color="primary"
+            (click)="openForm(row)"
+            matTooltip="EDITAR"
+          >
             <mat-icon>edit</mat-icon>
           </button>
-          <button mat-icon-button color="accent" (click)="delete(row.idlibros)" matTooltip="ELIMINAR">
+          <button
+            mat-icon-button
+            color="accent"
+            (click)="delete(row.idlibros)"
+            matTooltip="ELIMINAR"
+          >
             <mat-icon>delete</mat-icon>
           </button>
         </td>
       </ng-container>
     </cer-table>
   </ng-scrollbar>
-  <cer-paginator (onChangePage)="changePage($event)" [length]="totalRecords"> </cer-paginator>
+  <cer-paginator (onChangePage)="changePage($event)" [length]="totalRecords">
+  </cer-paginator>
 </cer-container>
 <cer-keypad-button [keypadButtons]="keypadButtons" (onClick)="doAction($event)">
 </cer-keypad-button>
