--- a/src/app/certificados/pages/page-list/page-list.component.html
+++ b/src/app/certificados/pages/page-list/page-list.component.html
@@ -1,10 +1,48 @@
 <cer-title></cer-title>
 <cer-container>
-  Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque ut similique
-  laudantium, officia unde enim aspernatur dolores expedita, voluptate omnis
-  deleniti impedit distinctio hic perferendis iusto possimus delectus quod
-  recusandae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet
-  magni minima omnis! Consequatur explicabo rerum illum officiis nam, beatae
-  temporibus sed facere? Maiores ipsum commodi nam laborum quas voluptatum ex?
-  <cer-paginator> </cer-paginator>
+  <ng-scrollbar class="heightMaxScrollBar">
+    <div class="botones">
+      <mat-form-field class="outline cursos">
+        <mat-label>Cursos</mat-label>
+        <mat-select
+          formControlName="id_cate_cur"
+          placeholder="Seleccionar un curso"
+        >
+          <mat-option *ngFor="let curso of cursos" [value]="curso.id_cate">
+            {{ curso.nom_cate }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+
+      <button mat-flat-button class="custom-button">
+        <span>
+          Participantes
+          <mat-icon><span class="material-icons">accessibility</span></mat-icon>
+        </span>
+      </button>
+    </div>
+
+    <cer-table [data]="data" [metaDataColumns]="metaDataColumns">
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef></th>
+        <td mat-cell *matCellDef="let row" class="alignButton">
+          <button mat-icon-button color="primary" matTooltip="EDITAR">
+            <mat-icon>edit</mat-icon>
+          </button>
+          <button
+            mat-icon-button
+            color="accent"
+            (click)="delete(row.cedula)"
+            matTooltip="ELIMINAR"
+          >
+            <mat-icon>delete</mat-icon>
+          </button>
+        </td>
+      </ng-container>
+    </cer-table>
+  </ng-scrollbar>
+  <cer-paginator
+    (onChangePage)="changePage($event)"
+    [length]="totalRecords"
+  ></cer-paginator>
 </cer-container>
