--- a/src/app/cursos/components/form/form.component.html
+++ b/src/app/cursos/components/form/form.component.html
@@ -11,7 +11,11 @@
     <div class="row">
       <mat-form-field class="outline">
         <mat-label>Nombre del Curso</mat-label>
-        <textarea matInput placeholder="Nombre del curso" formControlName="nom_cur"></textarea>
+        <textarea
+          matInput
+          placeholder="Nombre del curso"
+          formControlName="nom_cur"
+        ></textarea>
         <mat-icon matSuffix>text_fields</mat-icon>
       </mat-form-field>
     </div>
@@ -19,7 +23,12 @@
     <div class="row">
       <mat-form-field class="outline">
         <mat-label>Fecha de Inicio</mat-label>
-        <input matInput type="text" placeholder="Fecha de inicio" formControlName="fecha_inicio_cur" />
+        <input
+          matInput
+          type="text"
+          placeholder="Fecha de inicio"
+          formControlName="fecha_inicio_cur"
+        />
         <mat-icon matSuffix>event</mat-icon>
       </mat-form-field>
     </div>
@@ -27,7 +36,12 @@
     <div class="row">
       <mat-form-field class="outline">
         <mat-label>Fecha de Fin</mat-label>
-        <input matInput type="text" placeholder="Fecha de fin" formControlName="fecha_fin_cur" />
+        <input
+          matInput
+          type="text"
+          placeholder="Fecha de fin"
+          formControlName="fecha_fin_cur"
+        />
         <mat-icon matSuffix>event</mat-icon>
       </mat-form-field>
     </div>
@@ -35,15 +49,25 @@
     <div class="row">
       <mat-form-field class="outline">
         <mat-label>Duración del Curso</mat-label>
-        <textarea matInput placeholder="Duración del curso" formControlName="dur_cur"></textarea>
+        <textarea
+          matInput
+          placeholder="Duración del curso"
+          formControlName="dur_cur"
+        ></textarea>
         <mat-icon matSuffix>access_time</mat-icon>
       </mat-form-field>
     </div>
     <div class="row">
       <mat-form-field class="outline">
         <mat-label>Categoría del Curso</mat-label>
-        <mat-select formControlName="id_cate_cur" placeholder="Selecciona una categoría">
-          <mat-option *ngFor="let categoria of categorias" [value]="categoria.id_cate">
+        <mat-select
+          formControlName="id_cate_cur"
+          placeholder="Selecciona una categoría"
+        >
+          <mat-option
+            *ngFor="let categoria of categorias"
+            [value]="categoria.id_cate"
+          >
             {{ categoria.nom_cate }}
           </mat-option>
         </mat-select>
@@ -52,9 +76,16 @@
     <div class="row">
       <mat-form-field class="outline">
         <mat-label>Instructores</mat-label>
-        <mat-select multiple formControlName="ced_inst" placeholder="Selecciona instructores">
-          <mat-option *ngFor="let instructor of instructores" [value]="instructor.ced_inst">
-            {{ instructor.nom_pat_inst + ' ' + instructor.ape_pat_inst }}
+        <mat-select
+          multiple
+          formControlName="ced_inst"
+          placeholder="Selecciona instructores"
+        >
+          <mat-option
+            *ngFor="let instructor of instructores"
+            [value]="instructor.ced_inst"
+          >
+            {{ instructor.nom_pat_inst + " " + instructor.ape_pat_inst }}
           </mat-option>
         </mat-select>
       </mat-form-field>
@@ -64,7 +95,13 @@
         <input type="file" id="fileInput" (change)="capturarFile($event)" />
       </div>
       <div class="preview-container" *ngIf="previsualizacion">
-        <img [src]="previsualizacion" alt="" width="250px" height="250px" class="imgp" />
+        <img
+          [src]="previsualizacion"
+          alt=""
+          width="250px"
+          height="250px"
+          class="imgp"
+        />
       </div>
     </div>
   </div>
@@ -72,8 +109,6 @@
     <button mat-button color="primary" type="button" mat-dialog-close>
       Cancelar
     </button>
-    <button mat-raised-button color="primary" type="submit">
-      Grabar
-    </button>
+    <button mat-raised-button color="primary" type="submit">Grabar</button>
   </div>
 </form>
