feat: Integra los servicios para el modulo de usuarios

--- a/src/app/usuarios/pages/page-list/page-list.component.html
+++ b/src/app/usuarios/pages/page-list/page-list.component.html
@@ -8,7 +8,7 @@
           <button mat-icon-button color="primary" (click)="openForm(row)" matTooltip="EDITAR">
             <mat-icon>edit</mat-icon>
           </button>
-          <button mat-icon-button color="accent" (click)="delete(row.idlibros)" matTooltip="ELIMINAR">
+          <button mat-icon-button color="accent" (click)="delete(row.id_usu)" matTooltip="ELIMINAR">
             <mat-icon>delete</mat-icon>
           </button>
         </td>
