--- a/src/app/certificados/componentes/form/form.component.html
+++ b/src/app/certificados/componentes/form/form.component.html
@@ -16,8 +16,8 @@
       Cargar CSV
     </button>
 
-
-    <button mat-raised-button color="warn" type="button" class="right-button">
+    <button mat-raised-button color="warn" type="button" class="right-button"
+      (click)="registerParticipantes();generateCertificates()">
       Generar Certificados
     </button>
   </div>
@@ -32,5 +32,27 @@
 
     <cer-paginator (onChangePage)="changePage($event)" [length]="totalRecords">
     </cer-paginator>
+
+    <div id="certificates-section">
+      <div *ngFor="let row of data; let i = index" class="certificate-container">
+        <div class="certificate" id="certificate-container-{{i}}">
+          <img [src]="detalleCursosInstructores.curso.url_plantilla" alt="Certificado">
+          <h2>{{ row.nom_pat_par }} {{ row.ape_pat_par }}</h2>
+          <div class="container_detalle">
+            <p>Por haber aprobado el curso</p>
+            <h1>{{detalleCursosInstructores.curso.nom_cur}}</h1>
+            <p>Realizado el {{detalleCursosInstructores.curso.fecha_inicio_cur}} , con duración de
+              {{detalleCursosInstructores.curso.dur_cur}}</p>
+          </div>
+          <div class="container_firmas" *ngFor="let instructor of detalleCursosInstructores.instructores">
+            <div class="block_firma">
+              <img [src]="instructor.url_firma" alt="Firma">
+              <h3 class="nombre_firma">{{instructor.nom_pat_inst}}{{instructor.ape_pat_inst}}</h3>
+              <p>{{instructor.puesto_inst}}</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </form>
