--- a/src/app/instructores/components/form/form.component.html
+++ b/src/app/instructores/components/form/form.component.html
@@ -15,6 +15,7 @@
         type="text"
         placeholder="Cédula"
         formControlName="ced_inst"
+        [readonly]="isEdit"
       />
       <mat-icon matSuffix>credit_card</mat-icon>
     </mat-form-field>
@@ -127,7 +128,13 @@
       <input type="file" id="fileInput" (change)="capturarFile($event)" />
     </div>
     <div class="preview-container" *ngIf="previsualizacion">
-      <img [src]="previsualizacion" alt="" width="250px" height="250px" class="imgp" />
+      <img
+        [src]="previsualizacion"
+        alt=""
+        width="250px"
+        height="250px"
+        class="imgp"
+      />
     </div>
   </div>
   <div mat-dialog-actions class="action">
