refactor: Integra los modulos faltantes con los respectivos servicios

--- a/src/app/categorias/pages/page-list/page-list.component.html
+++ b/src/app/categorias/pages/page-list/page-list.component.html
@@ -16,7 +16,7 @@
           <button
             mat-icon-button
             color="accent"
-            (click)="delete(row.idlibros)"
+            (click)="delete(row.id_cate)"
             matTooltip="ELIMINAR"
           >
             <mat-icon>delete</mat-icon>
