refactor: Corrige los estilos del certificado
Guarda en formato png
Arregla las dimensiones y estilos del certificado

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<!-- <mat-sidenav-container autosize="true">
+<mat-sidenav-container autosize="true">
   <mat-sidenav [opened]="abrir" mode="side" *ngIf="isMenuRequired">
     <div class="logo" fxLayout fxLayoutGap="20px" fxLayoutAlign="start center">
       <mat-icon>face</mat-icon>
@@ -10,5 +10,5 @@
     <cer-header *ngIf="isHeaderRequired"></cer-header>
     <router-outlet></router-outlet>
   </mat-sidenav-content>
-</mat-sidenav-container> -->
-<cer-modal-certificados></cer-modal-certificados>
+</mat-sidenav-container>
+<!-- <cer-modal-certificados></cer-modal-certificados> -->
