--- a/src/app/certificados/componentes/form/form.component.css
+++ b/src/app/certificados/componentes/form/form.component.css
@@ -45,35 +45,38 @@
   position: relative;
   color: black;
   font-size: 14px;
-  border: 1px solid red;
 }
-
-.certificate img {
-  width: 100%; /* Ajusta el ancho de la imagen al 100% del contenedor */
-}
-
-.certificate-content {
+.certificate .participanteNom {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  top: 40%;
+  width: 100%;
+  height: fit-content;
+  /* background-color: red; */
+}
+.certificate .participanteNom h2 {
+  font-family: "Pinyon Script", cursive;
+  font-size: 64px;
+  font-weight: bold;
   text-align: center;
-  padding: 10px;
+  text-decoration: underline;
+  margin: 0; /* Elimina el margen predeterminado del h2 */
+}
+.certificate img {
+  width: calc(100% - 0%); /* Restando el 80% del ancho del contenedor */
 }
 
-.certificate h2 {
-  position: absolute;
-  top: 45%;
-  left: 40%;
-  margin: 0;
+.certificadoInfo p {
+  font-size: 12px;
+  text-align: justify;
+  letter-spacing: 001px;
+  margin: 0; /* Elimina el margen predeterminado del p */
+  line-height: 13px;
 }
-
 .certificate .container_detalle {
   position: absolute;
   top: 55%;
   width: 100%;
   margin: 0;
-  border: 1px solid black;
   text-align: center;
   align-items: center;
   line-height: 1.2; /* Ajusta el valor según tus necesidades */
@@ -84,37 +87,103 @@
 }
 
 .container_firmas {
-  position: absolute;
-  top: 70%;
-  width: auto;
-  border: 1px solid black;
-  text-align: center;
+  width: 80%;
+  height: auto;
   display: flex;
-  align-self: auto;
-  flex-wrap: wrap;
+  align-content: center;
+  justify-content: space-around;
+  position: absolute;
+  top: 65%;
+  left: 10%;
 }
 
 .block_firma {
-  align-items: center;
-  margin: 0 10px;
-  border: 1px solid red;
-  box-sizing: border-box; /* Asegura que el margen no afecte el tamaño total */
+  margin: 0 10px; /* Espacio entre las firmas */
+  text-align: center; /* Centrar el contenido dentro de cada firma */
 }
 
 .block_firma img {
-  width: 60px;
-  height: 100%;
+  position: relative;
+  width: 100px;
+  height: auto;
   margin: 0;
   padding: 0;
   line-height: 0.5;
 }
-
 .nombre_firma {
-  margin: 5px 0; /* Ajusta el margen superior e inferior según tus necesidades */
+  font-weight: bold;
+  margin-bottom: 3px; /* Reducir aún más el margen inferior del h2 */
 }
 
-p {
+.puesto_firma {
+  font-size: 12px;
+  text-align: center;
+  letter-spacing: 0.01em;
   margin: 0;
+  line-height: 13px;
 }
 
 /* Agrega cualquier estilo adicional necesario */
+
+.datos {
+  /*  background-color: salmon; */
+  /*  opacity: 0.5; */
+  width: 100%;
+  height: 90%;
+  position: absolute;
+  margin: 0 auto;
+}
+.infoGen {
+  width: 100%;
+  height: 100%;
+  /*   background-color: blue; */
+  /*   border: 1px solid red; */
+  position: relative;
+}
+.certificadoPlant {
+  width: fit-content;
+  height: fit-content;
+  /* background-color: black; */
+}
+.certificadoPlant img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+.certificadoInfo {
+  position: absolute;
+  top: 50%;
+  left: 25%;
+  height: fit-content;
+  width: 50%;
+  align-items: center;
+  padding-top: 10px;
+  /* background-color: green; */
+}
+.certificadoInfo p {
+  font-size: 12px;
+  text-align: justify;
+  letter-spacing: 001px;
+  margin: 0; /* Elimina el margen predeterminado del p */
+  line-height: 13px;
+}
+.fechaHoy {
+  position: absolute;
+  width: 100%;
+  height: fit-content;
+  top: 60%;
+  align-content: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  /* background-color: yellow; */
+}
+
+.fechaHoy p {
+  font-size: 12px;
+  text-align: center; /* Centrar horizontalmente el texto */
+  letter-spacing: 0.01em; /* Ajuste en el espaciado de las letras */
+  margin: 0;
+  line-height: 13px;
+}
