refactor: Arregla detalles de importaciones y respecto a la fecha actual

--- a/src/app/certificados/componentes/form/form.component.css
+++ b/src/app/certificados/componentes/form/form.component.css
@@ -23,6 +23,8 @@
 
 .modal-content-container {
   margin: 15px 20px 20px 20px;
+  max-height: 400px; /* Ajusta la altura máxima según tus necesidades */
+  overflow-y: auto;
 }
 
 .action {
