feat: Implementa un campo para editor html para el detalle del certificado
Se utilizo el richEditor para el campo para el detalle del certificado.
Ademas se coloco el codigo del certificado para validarlo.

--- a/src/app/certificados/componentes/form/form.component.css
+++ b/src/app/certificados/componentes/form/form.component.css
@@ -189,3 +189,14 @@
   margin: 0;
   line-height: 13px;
 }
+
+.codigo {
+  position: absolute;
+  width: auto;
+  height: fit-content;
+  bottom: 1px;
+  left: 10px;
+  font-size: 12px;
+  text-align: justify;
+  /* background-color: yellow; */
+}
