--- a/src/app/certificados/componentes/form/form.component.html
+++ b/src/app/certificados/componentes/form/form.component.html
@@ -11,9 +11,14 @@
     <input type="file"
       accept=".csv, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel"
       (change)="csvImport($event)" style="display: none" #fileInput />
+    <a href="../../../../assets/archives/participantes.csv" download="participantes.csv">
+      <button mat-raised-button type="button" class="left-button">
+        <mat-icon>cloud_download</mat-icon>Plantilla CSV
+      </button>
+    </a>
 
-    <button mat-raised-button type="button" class="left-button" (click)="fileInput.click()">
-      Cargar CSV
+    <button mat-raised-button type="button" class="center-button" (click)="fileInput.click()">
+      <mat-icon>cloud_upload</mat-icon> Cargar CSV
     </button>
 
     <button mat-raised-button color="warn" type="button" class="right-button"
