style: Mejora los estilos para richEditor en ancho

--- a/src/app/cursos/components/form/form.component.html
+++ b/src/app/cursos/components/form/form.component.html
@@ -64,10 +64,10 @@
       </mat-form-field>
     </div>
     <div class="row">
-      <div class="outline">
+      <div class="outline" style=" width: 500px">
         <mat-label>Detalle del Certificado</mat-label>
         <ejs-richtexteditor [(ngModel)]="certificadoContent" formControlName="det_cer"
-          [toolbarSettings]="toolbarSettings" style="border:1px solid red; width: 100px;">
+          [toolbarSettings]="toolbarSettings">
 
         </ejs-richtexteditor>
       </div>
